store dialog pointer in safe place so it can be retrieved in the OK handler. bug 55261. r=av,hyatt,pavlov